Сделал pixel perfect
Сделал pixel perfect

--- a/barbershop/index.html
+++ b/barbershop/index.html
@@ -82,7 +82,7 @@
             </div>
       </div>
     </section>
-    <section class="index-content">
+    <section class="index-content contact-block">
         <div class="index-content-left contact-info">
           <h3 class="txt-caption">Контактная информация</h3>
             <p>
@@ -102,7 +102,7 @@
         </div>
         <div class="index-content-right">
           <div class="txt-caption">Записаться</div>
-            <p>Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
+            <p class="text-form">Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
             <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
               <div class="form-block">
                 <div class="form-item">
