--- a/barbershop/price-list.html
+++ b/barbershop/price-list.html
@@ -53,7 +53,7 @@
       <h1 class="lg-txt">ИСТИННО МУЖСКАЯ КЛАССИКА</h1>
       <section class="price-info">
           <div class="price-info-left">
-            <h3 class="txt-caption">МЫ ИСПОЛЬЗУЕМ ТОЛЬКО<br> ЛУЧШИЕ СРЕДСТВА:</h3>
+            <h3 class="txt-caption-small">МЫ ИСПОЛЬЗУЕМ ТОЛЬКО<br> ЛУЧШИЕ СРЕДСТВА:</h3>
             <ul class="brand-list">
               <li><a href="#">Baxter of California</a></li>
               <li><a href="#">Mr Natty</a></li>
@@ -62,7 +62,7 @@
             </ul>
           </div>
           <div class="price-info-right">
-            <h3 class="txt-caption">ЦЕНЫ НА УСЛУГИ<br> НАШИХ МАСТЕРОВ:</h3>
+            <h3 class="txt-caption-small">ЦЕНЫ НА УСЛУГИ<br> НАШИХ МАСТЕРОВ:</h3>
             <table class="price-table">
               <tr>
                 <td>СТРИЖКА</td>
@@ -80,7 +80,7 @@
           </div>
       </section>
       <section class="about-us">
-          <h3 class="txt-caption">НЕСКОЛЬКО СЛОВ О НАС:</h3>
+          <h3 class="txt-caption-small">НЕСКОЛЬКО СЛОВ О НАС:</h3>
           <div class="about-us-content">
             <p>Наша парикмахерская занимается исключительно мужскими стрижками. 
               Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа.
@@ -94,25 +94,25 @@
     </div>
   </main>
   <footer class="main-footer">
-      <div class="container footer-container">
-          <div class="footer-contacts">
-                Барбершоп «Бородинский»<br>
-                Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-                <a href="#">Как нас найти?</a><br>
-                Телефон: +7 (812) 666-02-66
-          </div>
-          <div class="footer-social">
-            <p>Давайте дружить!</p>
-            <a class="social-btn btn social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn btn social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn btn social-btn-inst" href="#">Инстаграм</a>
-          </div>
-          <div class="footer-copyright">
-            <p>Разработано:</p>
-            <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-          </div>
-      </div>
-  </footer>
+    <div class="container footer-container">
+        <div class="footer-contacts">
+          <p>Барбершоп «Бородинский»</p>
+          <p> Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+          <a href="#">Как нас найти?</a>
+          <p>Телефон: +7 (812) 666-02-66</p>    
+        </div>
+        <div class="footer-social">
+          <p>Давайте дружить!</p>
+          <a class="social-btn btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn btn social-btn-inst" href="#">Инстаграм</a>
+        </div>
+        <div class="footer-copyright">
+          <p>Разработано:</p>
+          <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+        </div>
+    </div>
+</footer>
   <div class="bg-popup">
       <div class="login-form popup">
           <form action="index.html">
