--- a/tehnomart/index.html
+++ b/tehnomart/index.html
@@ -18,12 +18,12 @@
     <div class="header-top">
       <div class="container header-container">
         <a class="header-logo">
-          <img src="img/logo-header.png" width="220" height="47" alt="Техномарт">
+          Техномарт
         </a>
         <label class="search">
-          <input type="search" placeholder="Поиск">
+          <input type="search" placeholder="Поиск:">
         </label>
-        <div class="marker">Закладка: 0</div>
+        <div class="marker">Закладки: 0</div>
         <div class="cart cart-empty">Корзина: 0</div>
         <div class="orders-btn">
           <a class="btn btn-success" href="#">Оформить заказ</a>
@@ -108,7 +108,7 @@
               <input id="slide-2" type="radio" name="slider">
               <div class="slide-item" id="slide-item-1">
                 <img src="img/slide-1.jpg" width="620" height="266" alt="Префораторы">
-                <div class="slide-caption">Префораторы</div>
+                <div class="slide-caption">Перфораторы</div>
                 <p>Настоящие мужские игрушки</p>
                 <a class="btn" href="">ОТКРЫТЬ КАТАЛОГ</a>
               </div>
@@ -146,7 +146,7 @@
       </section>
       <section class="popular">
         <div class="popular-type">
-          <h2>Популярные товары</h2>
+          <h2>Популярные товары:</h2>
           <a class="btn" href="">все популярные товары</a>
         </div>
         <div class="popular-product">
@@ -211,7 +211,7 @@
       <section class="brands">
         <div class="popular-type">
           <h2>Популярные производители:</h2>
-          <a class="btn" href="">все популярные товары</a>
+          <a class="btn" href="">все производители</a>
         </div>
         <div class="brands-list">
           <a href="#" class="brands-item">
@@ -260,7 +260,7 @@
     <section class="service">
       <div class="container">
         <h2>Сервисы</h2>
-        <p>Хороший интернет-магазин отличается от плохого не только ценами!
+        <p class="service-text">Хороший интернет-магазин отличается от плохого не только ценами!
           <br> Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <div class="tabs">
           <input type="radio" checked name="service" id="service-1">
@@ -282,8 +282,10 @@
               <div class="delivery">
                 <h3>Доставка</h3>
                 <p>
-                  Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая
-                  его на ваш этаж!
+                  Мы с удовольствием доставим ваш товар прямо 
+                  к вашему подъезду совершенно бесплатно!
+                  Ведь мы неплохо заработаем,<br>
+                  поднимая его на ваш этаж!
                 </p>
               </div>
             </div>
@@ -317,7 +319,8 @@
           любителей сэкномить на гастарбайтерах.
         </p>
         <p>
-          Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:
+          Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+          Техномарт работает со многими транспортными компаниями: 
         </p>
         <ul class="list-service">
           <li>Деловые линии</li>
@@ -327,7 +330,7 @@
         <a href="#" class="btn">Подробнее о компании</a>
       </div>
       <div class="contact">
-        <h3>Контакты</h3>
+        <h2>Контакты</h2>
         <p>Вы можете забрать товар сами,
           <br> заехав в наш офис:
         </p>
@@ -391,7 +394,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <div class="container footer-container">
+      <div class="container">
         <div class="footer-copyright">
           <p>© 2010–2017 Компания «Техномарт»
             <br> Все права защищены</p>
