--- a/barbershop/shop.html
+++ b/barbershop/shop.html
@@ -49,7 +49,7 @@
       <div class="breadcrumbs">
         <ul>
           <li>
-            <a href="index.ru">Глвная</a>
+            <a href="index.ru">Главная</a>
           </li>
           <li>
             <a href="shop.html">Магазин</a>
@@ -59,7 +59,7 @@
       </div>
       <div class="sidebar">
         <form action="shop.html">
-          <fieldset>
+          <fieldset class="brands">
             <legend>Производители:</legend>
             <input type="checkbox" id="brand-1" name="brand-1" value="Baxter of California">
             <input type="checkbox" id="brand-2" name="brand-2" value="American Crew">
@@ -70,7 +70,7 @@
             <label for="brand-1">
               <span class="chbx-label"></span>Baxter of California</label>
             <label for="brand-2">
-              <span class="chbx-label"></span>American Crew</label>
+              <span class="chbx-label"></span>Mr Natty</label>
             <label for="brand-3">
               <span class="chbx-label"></span>Suavecito</label>
             <label for="brand-4">
@@ -80,7 +80,7 @@
             <label for="brand-6">
               <span class="chbx-label"></span>American Crew</label>
           </fieldset>
-          <fieldset>
+          <fieldset class="product-group">
             <legend>Группы товаров:</legend>
             <input type="radio" id="gr-1" name="gr" value="gr1">
             <input type="radio" id="gr-2" name="gr" value="gr2">
@@ -102,7 +102,7 @@
               <figure class="product-img">
                 <img src="img/product-1.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
               </figure>
-              <p class="product-name">Набор для бритья
+              <p class="product-name">Набор для путешествий
                 <span class="name">«Baxter of California»</span>
               </p>
             </a>
@@ -204,25 +204,24 @@
   </main>
   <footer class="main-footer">
     <div class="container footer-container">
-      <div class="footer-contacts">
-        Барбершоп «Бородинский»
-        <br> Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8
-        <br>
-        <a href="#">Как нас найти?</a>
-        <br> Телефон: +7 (812) 666-02-66
-      </div>
-      <div class="footer-social">
-        <p>Давайте дружить!</p>
-        <a class="social-btn btn social-btn-vk" href="#">Вконтакте</a>
-        <a class="social-btn btn social-btn-fb" href="#">Фейсбук</a>
-        <a class="social-btn btn social-btn-inst" href="#">Инстаграм</a>
-      </div>
-      <div class="footer-copyright">
-        <p>Разработано:</p>
-        <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-      </div>
+        <div class="footer-contacts">
+          <p>Барбершоп «Бородинский»</p>
+          <p> Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+          <a href="#">Как нас найти?</a>
+          <p>Телефон: +7 (812) 666-02-66</p>    
+        </div>
+        <div class="footer-social">
+          <p>Давайте дружить!</p>
+          <a class="social-btn btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn btn social-btn-inst" href="#">Инстаграм</a>
+        </div>
+        <div class="footer-copyright">
+          <p>Разработано:</p>
+          <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+        </div>
     </div>
-  </footer>
+</footer>
   <div class="bg-popup">
       <div class="login-form popup">
           <form action="index.html">
