--- a/tehnomart/index.html
+++ b/tehnomart/index.html
@@ -22,6 +22,7 @@
         </a>
         <label class="search">
           <input type="search" placeholder="Поиск:">
+          <sapn class="search-icon"></sapn>
         </label>
         <div class="marker">Закладки: 0</div>
         <div class="cart cart-empty">Корзина: 0</div>
@@ -42,8 +43,8 @@
           <span class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
         </div>
         <div class="user-block">
-          <a class="btn user-btn btn-signin" type="button">Войти</a>
-          <a class="btn btn-reg" href="">Регистрация</a>
+          <a class="btn user-btn btn-signin">Войти</a>
+          <a class="btn btn-reg" href="#">Регистрация</a>
         </div>
       </div>
     </div>
@@ -335,12 +336,11 @@
           <br> заехав в наш офис:
         </p>
         <div class="map">
-          <iframe src="https://yandex.ru/map-widget/v1/-/CBaj6BCYpC" width="300" height="158" frameborder="0"></iframe>
+         
         </div>
-        <a href="#" class="btn">Заблудились? Напишите нам!</a>
+        <a href="#" class="btn feadback-btn">Заблудились? Напишите нам!</a>
       </div>
     </section>
-
   </main>
   <footer class="main-footer">
     <div class="footer-top">
@@ -416,7 +416,11 @@
       </div>
     </div>
   </footer>
-  <div class="popup map">
+  <div class="bg-popup-map">
+    <div class="popup-map">
+        <iframe src="https://yandex.ru/map-widget/v1/-/CBaj6BCYpC" width="940" height="477" frameborder="0"></iframe>
+        <button class="close-map close" type="button">Закрыть</button>
+    </div>
   </div>
   <div class="bg-popup">
       <div class="feadback poupup">
@@ -437,7 +441,6 @@
                   </label>
                   <textarea name="message" id="message" cols="30" rows="10"></textarea>
             </div>
-           
             <div class="btn-bottom">
                 <button class="btn" type="submit">ОТПРАВИТЬ</button>
             </div>
@@ -446,14 +449,43 @@
         </div>
   </div>
   <script>
-      $(document).ready(function(){
-        $(".close").click(function(){
+    var login = $(".login-form input[name=login]");
+    var password = $(".login-form input[name=password]");
+    var storage = localStorage.getItem("login");
+    $(document).ready(function(){
+      $(".close").click(function(){
+        $(".bg-popup").css("display","none");
+        $(".login-form").removeClass("modal-error");
+      })
+      $(".feadback-btn").click(function(){
+        event.preventDefault();
+        $(".bg-popup").css("display","block");
+      })
+      $(".map").click(function(event){
+        event.preventDefault();
+        $(".bg-popup-map").css("display","block");
+      })
+      $(".close-map").click(function(){
+        $(".bg-popup-map").css("display","none");
+      })
+      $('html').keydown(function(e){
+        if (e.keyCode == 27) {
           $(".bg-popup").css("display","none");
-        })
-        $(".user-block").click(function(){
-          $(".bg-popup").css("display","block");
-        })
+          $(".login-form").removeClass("modal-error");
+        }
       });
-    </script>
+      $(".login-form form").submit(function(event) {
+        var login = $("input[name=login]");
+        var password = $("input[name=password]");
+        if (!login.val() || !password.val()) {
+          event.preventDefault();
+          $(".login-form").removeClass("modal-error");
+          $(".login-form").addClass("modal-error");
+        } else {
+          localStorage.setItem("login", login.value);
+        }
+      })
+    });
+  </script>
 </body>
 </html>
