--- a/tehnomart/catalog.html
+++ b/tehnomart/catalog.html
@@ -138,22 +138,22 @@
             <fieldset class="f-brands">
               <legend>Производители:</legend>
               <input id="br-1" type="checkbox" name="bosch" value="bosch">
-              <input id="br-2" type="checkbox" name="Интерскол" value="Интерскол">
-              <input id="br-3" type="checkbox" name="Makita" value="Makita">
-              <input id="br-4" type="checkbox" name="Dewalt" value="Dewalt">
-              <input id="br-5" type="checkbox" name="Hitachi" value="Hitachi">
               <label for="br-1"><span class="chbox-br"></span>bosch</label>
+              <input disabled id="br-2" type="checkbox" name="Интерскол" value="Интерскол">
               <label for="br-2"><span class="chbox-br"></span>Интерскол</label>
+              <input id="br-3" type="checkbox" name="Makita" value="Makita">
               <label for="br-3"><span class="chbox-br"></span>Makita</label>
+              <input id="br-4" type="checkbox" name="Dewalt" value="Dewalt">
               <label for="br-4"><span class="chbox-br"></span>Dewalt</label>
+              <input id="br-5" type="checkbox" name="Hitachi" value="Hitachi">
               <label for="br-5"><span class="chbox-br"></span>Hitachi</label>
             </fieldset>
             <div class="hr"></div>
             <fieldset class="f-battery">
               <legend>Питание:</legend>
               <input id="bat-1" type="radio" name="bat" value="bat1">
-              <input id="bat-2" type="radio" name="bat" value="bat2">
               <label for="bat-1"><span class="rd-bry"></span>Аккумуляторные</label>
+              <input id="bat-2" type="radio" name="bat" value="bat2">
               <label for="bat-2"><span class="rd-bry"></span>Сетевые</label>
             </fieldset>
             <button class="btn" type="button">
@@ -206,7 +206,7 @@
                 </figure>
                 <span class="product-name">Перфоратор BOSCH BFG 2000</span>
               </a>
-              <div class="product-hover">
+              <div class="product-hover product-active">
                 <a class="btn btn-shop" href="#">Купить</a>
                 <button class="btn btn-mark" type="button">В закладки</button>
               </div>
@@ -402,45 +402,5 @@
       </div>
     </div>
   </footer>
-  <div class="popup map">
-  </div>
-  <div class="bg-popup">
-    <div class="feadback poupup">
-      <form action="index.html">
-        <div class="input-block">
-          <div class="label-block">
-            <div class="label-group">
-              <label>Ваше имя</label>
-              <input type="text" placeholder="Представьтесь, пожалуйста">
-            </div>
-            <div class="label-group">
-              <label>Ваш e-mail:</label>
-              <input type="email" placeholder="Для отправки ответа">
-            </div>
-          </div>
-          <label>
-            Текст письма:
-          </label>
-          <textarea name="message" id="message" cols="30" rows="10"></textarea>
-        </div>
-
-        <div class="btn-bottom">
-          <button class="btn" type="submit">ОТПРАВИТЬ</button>
-        </div>
-        <button class="close" type="button">Закрыть</button>
-      </form>
-    </div>
-  </div>
-  <script>
-    $(document).ready(function () {
-      $(".close").click(function () {
-        $(".bg-popup").css("display", "none");
-      })
-      $(".user-block").click(function () {
-        $(".bg-popup").css("display", "block");
-      })
-    });
-  </script>
 </body>
-
 </html>
