--- a/barbershop/index.html
+++ b/barbershop/index.html
@@ -166,7 +166,7 @@
   </div>
   <div class="bg-popup-map">
       <div class="map popup">
-          <iframe src="https://yandex.ru/map-widget/v1/-/CBaj6BCYpC" width="766" height="560" frameborder="0"></iframe>
+          <iframe src="https://yandex.ru/map-widget/v1/-/CBaj6BCYpC" width="766" height="560"></iframe>
           <button class="close-map close" type="button">Закрыть</button>
         </div>
   </div>
