--- a/barbershop/shop.html
+++ b/barbershop/shop.html
@@ -232,7 +232,7 @@
 </footer>
   <div class="bg-popup">
       <div class="login-form popup">
-          <form action="">
+          <form action="index.html">
             <h3 class="txt-caption">ЛИЧНЫЙ КАБИНЕТ</h3>
             <p>Введите пожалуйста свой логин и пароль</p>
             <input name="login" type="text" placeholder="Логин">
