--- a/tehnomart/catalog.html
+++ b/tehnomart/catalog.html
@@ -21,10 +21,10 @@
             <a class="header-logo">
               Техномарт
             </a>
-
-        <label class="search">
-          <input type="search" placeholder="Поиск">
-        </label>
+            <label class="search">
+              <input type="search" placeholder="Поиск:">
+              <span class="search-icon"></span>
+            </label>
         <div class="marker">Закладка: 0</div>
         <div class="cart">Корзина: 10</div>
         <div class="orders-btn">
@@ -54,7 +54,6 @@
           </div>
         </div>
       </div>
-    </div>
     </div>
     <div class="header-bottom">
       <div class="container">
