--- a/tehnomart/index.html
+++ b/tehnomart/index.html
@@ -22,7 +22,7 @@
         </a>
         <label class="search">
           <input type="search" placeholder="Поиск:">
-          <sapn class="search-icon"></sapn>
+          <span class="search-icon"></span>
         </label>
         <div class="marker">Закладки: 0</div>
         <div class="cart cart-empty">Корзина: 0</div>
@@ -133,13 +133,13 @@
             <div class="properties-item item-4">
               <a href="#">
                 <div class="features-name">Скидки 50%</div>
-                <div class="btn btn-prop" href="">На 350 товаров</div>
+                <div class="btn btn-prop">На 350 товаров</div>
               </a>
             </div>
             <div class="properties-item item-5">
               <a href="#">
                 <div class="features-name">Доставка</div>
-                <div class="btn btn-prop" href="">бесплатно</div>
+                <div class="btn btn-prop">бесплатно</div>
               </a>
             </div>
           </div>
@@ -418,7 +418,7 @@
   </footer>
   <div class="bg-popup-map">
     <div class="popup-map">
-        <iframe src="https://yandex.ru/map-widget/v1/-/CBaj6BCYpC" width="940" height="477" frameborder="0"></iframe>
+        <iframe src="https://yandex.ru/map-widget/v1/-/CBaj6BCYpC" width="940" height="477"></iframe>
         <button class="close-map close" type="button">Закрыть</button>
     </div>
   </div>
